# rp_jump

./: .env  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  build.sh  pyproject.toml  report_portal.py  requirements.txt  rpjump.spec  rpjump_server.py
rpjump_extension/: background.js  context_menu.js  errors.js  favorites.js  manifest.json  options.html  options.js  report_portal.js  utils.js
